@@ -33,14 +33,6 @@ namespace Mono.Rocks {
 
 	public static class Int32Rocks {
 
-		[Obsolete ("Use Times(int) plus IEnumerableRocks.Action().")]
-		public static void Times (this int self, Action<int> action)
-		{
-			for (int i = 0; i < self; i++) {
-				action (i);
-			}
-		}
-
 		public static IEnumerable<int> Times (this int self)
 		{
 			if (self < 0)
@@ -55,40 +47,16 @@ namespace Mono.Rocks {
 			}
 		}
 
-		[Obsolete ("Use UpTo(int,int) plus IEnumerableRocks.Action().")]
-		public static void UpTo (this int self, int limit, Action<int> action)
-		{
-			for (int i = self; i <= limit; i++) {
-				action (i);
-			}
-		}
-
 		public static IEnumerable<int> UpTo (this int self, int limit)
 		{
 			for (int i = self; i <= limit; ++i)
 				yield return i;
 		}
 
-		[Obsolete ("Use DownTo(int,int) plus IEnumerableRocks.Action().")]
-		public static void DownTo (this int self, int limit, Action<int> action)
-		{
-			for (int i = self; i >= limit; i--) {
-				action (i);
-			}
-		}
-
 		public static IEnumerable<int> DownTo (this int self, int limit)
 		{
 			for (int i = self; i >= limit; i--)
 				yield return i;
-		}
-
-		[Obsolete ("Use Step(int,int,int) plus IEnumerableRocks.Action().")]
-		public static void Step (this int self, int limit, int step, Action<int> action)
-		{
-			for (int i = self; i <= limit; i += step) {
-				action (i);
-			}
 		}
 
 		public static IEnumerable<int> Step (this int self, int limit, int step)
